{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 595,
  "lineage": "6f19c3f8-e916-c319-5562-8c22a84da6c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03591823f6ca174b2",
            "public_dns": "ec2-52-215-12-251.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.215.12.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-a",
              "environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fb6245dabaffecec",
            "public_dns": "ec2-52-213-71-12.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.213.71.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-b",
              "environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ce057fdcaa2ed8ac",
            "public_dns": "ec2-52-31-232-208.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.232.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-c",
              "environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-ecs-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01de9443606bda731",
            "arn": "arn:aws:ec2:eu-west-1:161526710706:instance/i-0c0cdd68dcff4bcb2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "app-ecs-instance-profile",
            "id": "i-0c0cdd68dcff4bcb2",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07cef7757c337643f",
            "private_dns": "ip-10-254-6-55.eu-west-1.compute.internal",
            "private_ip": "10.254.6.55",
            "public_dns": "ec2-52-51-35-100.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.51.35.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e3343efb4312adaa",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0192ec3a4867cd81b",
            "tags": {
              "Name": "app-ecs-instance",
              "env": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7a653177e033d2f",
              "sg-0f8dc19a9d1586eb6"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.app-ecs-instance-profile",
            "aws_key_pair.deployer-key",
            "aws_security_group.app-sg",
            "aws_security_group.default-sg",
            "aws_subnet.apps-a",
            "data.aws_ssm_parameter.amazon-linux-ecs-ami",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0888fd4659cc599ff",
            "owner_id": "161526710706",
            "tags": {
              "Name": "main",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "hello-app-lb-logs",
                "enabled": true,
                "prefix": "app-lb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:loadbalancer/app/app-lb/e08b3b854122f5a6",
            "arn_suffix": "app/app-lb/e08b3b854122f5a6",
            "dns_name": "app-lb-1051207277.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:loadbalancer/app/app-lb/e08b3b854122f5a6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "security_groups": [
              "sg-0fbfeb2a996ed059e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f96bfa95db00990"
              },
              {
                "subnet_id": "subnet-0b1f6c4751762758e"
              },
              {
                "subnet_id": "subnet-0d8c8794cbdfd2407"
              }
            ],
            "subnets": [
              "subnet-04f96bfa95db00990",
              "subnet-0b1f6c4751762758e",
              "subnet-0d8c8794cbdfd2407"
            ],
            "tags": {
              "Name": "app-lb",
              "env": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_s3_bucket.lb-logs-bucket",
            "aws_security_group.lb-sg",
            "aws_subnet.lb-a",
            "aws_subnet.lb-b",
            "aws_subnet.lb-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app-lb-lnr",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:listener/app/app-lb/e08b3b854122f5a6/63449f19fd29a688",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:targetgroup/app-lb-tg-85/01586f9a2e86ad01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:listener/app/app-lb/e08b3b854122f5a6/63449f19fd29a688",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:loadbalancer/app/app-lb/e08b3b854122f5a6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.app-lb",
            "aws_lb_target_group.app-lb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:targetgroup/app-lb-tg-85/01586f9a2e86ad01",
            "arn_suffix": "targetgroup/app-lb-tg-85/01586f9a2e86ad01",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:161526710706:targetgroup/app-lb-tg-85/01586f9a2e86ad01",
            "lambda_multi_value_headers_enabled": false,
            "name": "app-lb-tg-85",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-lb-tg",
              "env": "dev"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main",
            "random_integer.app-target-group-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03591823f6ca174b2",
            "id": "nat-0acdf3ce98d8afe4e",
            "network_interface_id": "eni-00e6d20cd77be9467",
            "private_ip": "10.254.9.143",
            "public_ip": "52.215.12.251",
            "subnet_id": "subnet-05a12b14a774f5585",
            "tags": {
              "Name": "nat-a",
              "environment": "dev"
            }
          },
          "depends_on": [
            "aws_eip.nat-a",
            "aws_internet_gateway.main",
            "aws_subnet.nat-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb6245dabaffecec",
            "id": "nat-074c6ff794a7bcb95",
            "network_interface_id": "eni-04b3a14b6aa1d3445",
            "private_ip": "10.254.10.252",
            "public_ip": "52.213.71.12",
            "subnet_id": "subnet-0b51e9fe7dfa50b38",
            "tags": {
              "Name": "nat-b",
              "environment": "dev"
            }
          },
          "depends_on": [
            "aws_eip.nat-b",
            "aws_internet_gateway.main",
            "aws_subnet.nat-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce057fdcaa2ed8ac",
            "id": "nat-0aac09a816734635e",
            "network_interface_id": "eni-0d20b02902c429837",
            "private_ip": "10.254.11.248",
            "public_ip": "52.31.232.208",
            "subnet_id": "subnet-0cd554a4a51b922bc",
            "tags": {
              "Name": "nat-c",
              "environment": "dev"
            }
          },
          "depends_on": [
            "aws_eip.nat-c",
            "aws_internet_gateway.main",
            "aws_subnet.nat-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01908771960f42b70",
            "owner_id": "161526710706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0acdf3ce98d8afe4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_nat_gateway.nat-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05dd59287e8f844d7",
            "owner_id": "161526710706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-074c6ff794a7bcb95",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_nat_gateway.nat-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee3fd9c704324f91",
            "owner_id": "161526710706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0aac09a816734635e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_nat_gateway.nat-c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eb1abf3ef56d0151",
            "owner_id": "161526710706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0888fd4659cc599ff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apps-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f18ec637d7fdf1d",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0192ec3a4867cd81b"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.apps-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apps-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87576880ad84df9",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0514af4fe98faf086"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.apps-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apps-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0e4033248cf771",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0a6a2001dfa542747"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.apps-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b41cb8e7c193c22",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0820f5d58333a7cc7"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.data-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0632ccdf0013809ed",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0fa248a4c9dda1f19"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.data-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06150ac7f195feaed",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-00b0e6716b02ea46b"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.data-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01257c295d6962b24",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0d8c8794cbdfd2407"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.lb-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093aee5ed34e7abbf",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-04f96bfa95db00990"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.lb-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3054055cd106914",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0b1f6c4751762758e"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.lb-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093fb89c5ff82cf23",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-05a12b14a774f5585"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.nat-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038bd58e11138f300",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0b51e9fe7dfa50b38"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.nat-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b04ff4e3f16be1c",
            "route_table_id": "rtb-0eb1abf3ef56d0151",
            "subnet_id": "subnet-0cd554a4a51b922bc"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.nat-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:security-group/sg-0f8dc19a9d1586eb6",
            "description": "App",
            "egress": [],
            "id": "sg-0f8dc19a9d1586eb6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbfeb2a996ed059e"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "app-sg",
            "name_prefix": null,
            "owner_id": "161526710706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_security_group.lb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:security-group/sg-0f7a653177e033d2f",
            "description": "Default secrity group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7a653177e033d2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-sg",
            "name_prefix": null,
            "owner_id": "161526710706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-sg",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:security-group/sg-0fbfeb2a996ed059e",
            "description": "Allow LB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbfeb2a996ed059e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": null,
            "owner_id": "161526710706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:security-group/sg-0c95a4b5679d81c8d",
            "description": "Access to RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c95a4b5679d81c8d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f8dc19a9d1586eb6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds",
            "name_prefix": null,
            "owner_id": "161526710706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_security_group.app-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apps-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0192ec3a4867cd81b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.254.6.0/24",
            "id": "subnet-0192ec3a4867cd81b",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "apps-a",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apps-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0514af4fe98faf086",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.254.7.0/24",
            "id": "subnet-0514af4fe98faf086",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "apps-b",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apps-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0a6a2001dfa542747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.254.8.0/24",
            "id": "subnet-0a6a2001dfa542747",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "apps-c",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0820f5d58333a7cc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.254.3.0/24",
            "id": "subnet-0820f5d58333a7cc7",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "data-a",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0fa248a4c9dda1f19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.254.4.0/24",
            "id": "subnet-0fa248a4c9dda1f19",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "data-b",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-00b0e6716b02ea46b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.254.5.0/24",
            "id": "subnet-00b0e6716b02ea46b",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "data-c",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0d8c8794cbdfd2407",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.254.0.0/24",
            "id": "subnet-0d8c8794cbdfd2407",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "lb-a",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-04f96bfa95db00990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.254.1.0/24",
            "id": "subnet-04f96bfa95db00990",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "lb-b",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0b1f6c4751762758e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.254.2.0/24",
            "id": "subnet-0b1f6c4751762758e",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "lb-c",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-05a12b14a774f5585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.254.9.0/24",
            "id": "subnet-05a12b14a774f5585",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "nat-a",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0b51e9fe7dfa50b38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.254.10.0/24",
            "id": "subnet-0b51e9fe7dfa50b38",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "nat-b",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:subnet/subnet-0cd554a4a51b922bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.254.11.0/24",
            "id": "subnet-0cd554a4a51b922bc",
            "map_public_ip_on_launch": false,
            "owner_id": "161526710706",
            "tags": {
              "Name": "nat-c",
              "environment": "dev"
            },
            "vpc_id": "vpc-08b57cf330563acac"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:161526710706:vpc/vpc-08b57cf330563acac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.254.0.0/16",
            "default_network_acl_id": "acl-072d57419fb51baa7",
            "default_route_table_id": "rtb-03d78781ad340d89c",
            "default_security_group_id": "sg-032457c7f8608d7ec",
            "dhcp_options_id": "dopt-80431ce6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08b57cf330563acac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d78781ad340d89c",
            "owner_id": "161526710706",
            "tags": {
              "Name": "main",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}